fix a broken CSS comment

--- a/platform-dom/src/main/resources/com/softicar/platform/dom/elements/dom-button-style.css
+++ b/platform-dom/src/main/resources/com/softicar/platform/dom/elements/dom-button-style.css
@@ -21,7 +21,7 @@
 	padding: 0;
 	position: relative;
 	white-space: nowrap;
-	/*justify-self: start;
+	justify-self: start;
 
 	/* look */
 	background-color: transparent;
